Issue #3219921 by nironan, kostyashupenko, javi-er, Gauravmahlawat, jens.de.geit, mchameddie, Kristen Pol, timohuisman, andy-blum, ckrina: Claro: display the vertical scrollbar when many results are returned by linkit

--- a/core/themes/claro/css/components/jquery.ui/theme.css
+++ b/core/themes/claro/css/components/jquery.ui/theme.css
@@ -596,7 +596,6 @@
  */
 
 .ui-autocomplete {
-  overflow: hidden;
   color: #55565b;
   border: 1px solid rgba(216, 217, 224, 0.8);
   border-top: 0;
