--- a/core/themes/claro/css/components/jquery.ui/theme.pcss.css
+++ b/core/themes/claro/css/components/jquery.ui/theme.pcss.css
@@ -381,7 +381,6 @@
  * Autocomplete
  */
 .ui-autocomplete {
-  overflow: hidden;
   color: var(--jui-dropdown-fg-color);
   border: var(--input-border-size) solid var(--jui-dropdown-border-color);
   border-top: 0;
